--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "element-plus": "^2.3.9",
+    "vue": "^3.0.0",
+    "vue-router": "^4.2.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -26,10 +30,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "husky": "^8.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.8.8",
     "typescript": "~4.1.5",
-    "husky": "^8.0.0"
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1"
   }
 }
