--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "core-js": "^3.6.5",
     "element-plus": "^2.3.9",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.2.4",
     "vuex": "^4.0.2"
