--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.12",
     "normalize.css": "^8.0.1",
-    "vue": "^3.0.0",
+    "vue": "^3.2.36",
     "vue-router": "^4.2.4",
     "vuex": "^4.0.2"
   },
@@ -26,7 +27,7 @@
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-typescript": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
